# librealsense

examples/: CMakeLists.txt  example.hpp
examples/align/: rs-align.cpp
examples/playground/: CMakeLists.txt  playground.cpp
src/proc/: align.cpp  align.h
